--- a/jupyter/Part1-3.ipynb
+++ b/jupyter/Part1-3.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -186,9 +186,9 @@
     "# 构建每个点出发到达次数（非geofly）\n",
     "# 不区分起点和终点\n",
     "# 包括：\n",
-    "# 1. 点的进热度(./data/temp/feature_table/node_region_start_ratio.csv)\n",
-    "# 2. 出热度(./data/temp/feature_table/node_region_end_ratio.csv)\n",
-    "# 3. 全局热度(./data/temp/feature_table/node_region_overall_ratio.csv)\n",
+    "# 1. 点的进热度(./data/temp/feature_table/node_region_end_ratio)\n",
+    "# 2. 出热度(./data/temp/feature_table/node_region_start_ratio)\n",
+    "# 3. 全局热度(./data/temp/feature_table/node_region_overall_ratio)\n",
     "def _create_node_region_ratio_table():\n",
     "    print(\"_create_node_region_ratio_table\")\n",
     "    node_count_start = {}\n",
@@ -223,16 +223,6 @@
     "            continue\n",
     "        node_region[row[0]] = eval(row[1])\n",
     "\n",
-    "    # 读取node_neis\n",
-    "    i = 0\n",
-    "    node_neis = {}\n",
-    "    csv_reader = csv.reader(open('./data/temp/neighbour.csv', encoding='utf-8'))\n",
-    "    for row in csv_reader:\n",
-    "        i += 1\n",
-    "        if i == 1:\n",
-    "            continue\n",
-    "        node_neis[row[0]] = eval(row[1])\n",
-    "\n",
     "    # 得到geofly之前的进、出、总热度\n",
     "    i = 0\n",
     "    node_region_start_ratio = {}\n",
@@ -253,43 +243,60 @@
     "                total_start += node_count_start[nei]  # 区域内总出发\n",
     "                total_region += node_count_start[nei]  # 区域内总进出\n",
     "            if nei in node_count_end:\n",
-    "                total_end += node_count_end[nei]  # 区域内总进\n",
+    "                total_end += node_count_end[nei]  # 区域内总到达\n",
     "                total_region += node_count_end[nei]  # 区域内总进出\n",
     "\n",
     "        if node in node_count_start:  # 如果该点出发过\n",
     "            node_region_start_ratio[node] = node_count_start[node] / total_start  # region出发热度\n",
-    "            total_node += node_count_start[node]  # 计算总热度\n",
+    "            total_node += node_count_start[node]  # 计算该点总热度\n",
     "        else:\n",
-    "            node_region_start_ratio[node] = -1  # 不存在\n",
+    "            node_region_start_ratio[node] = 0  # 不存在\n",
     "\n",
     "        if node in node_count_end:  # 如果该点被到达过\n",
     "            node_region_end_ratio[node] = node_count_end[node] / total_end  # region到达热度\n",
-    "            total_node += node_count_end[node]  # 计算总热\n",
+    "            total_node += node_count_end[node]  # 计算该点总热度\n",
     "        else:\n",
-    "            node_region_end_ratio[node] = -1  # 不存在\n",
+    "            node_region_end_ratio[node] = 0  # 不存在\n",
     "\n",
     "        if total_region == 0 or total_node == 0:\n",
-    "            node_region_overall_ratio[node] = -1\n",
+    "            node_region_overall_ratio[node] = 0\n",
     "        else:\n",
     "            node_region_overall_ratio[node] = total_node / total_region\n",
+    "            \n",
+    "            \n",
+    "    with open('./data/temp/feature_table/node_region_start_ratio','wb+') as f:\n",
+    "        pickle.dump(node_region_start_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
     "\n",
-    "    with open(\"./data/temp/feature_table/node_region_start_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in node_region_start_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
+    "    with open('./data/temp/feature_table/node_region_end_ratio','wb+') as f:\n",
+    "        pickle.dump(node_region_end_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "        \n",
+    "    with open('./data/temp/feature_table/node_region_overall_ratio','wb+') as f:\n",
+    "        pickle.dump(node_region_overall_ratio, f, pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_create_node_region_ratio_table\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import numpy as np\n",
+    "import networkx as nx\n",
+    "import math\n",
+    "from scipy.stats import mode\n",
+    "import function\n",
+    "import pickle\n",
     "\n",
-    "    with open(\"./data/temp/feature_table/node_region_end_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in node_region_end_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
-    "    with open(\"./data/temp/feature_table/node_region_overall_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in node_region_overall_ratio.items():\n",
-    "            writer.writerow([key, value])"
+    "_create_node_region_ratio_table()"
    ]
   },
   {
@@ -301,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -375,8 +382,8 @@
     "    i = 0\n",
     "    node_region_start_geofly_ratio = {}\n",
     "    node_region_end_geofly_ratio = {}\n",
-    "\n",
-    "    node_geofly_region_overall_ratio = {}\n",
+    "    node_region_overall_geofly_ratio = {}\n",
+    "    \n",
     "    for node in node_region:  # 区域内每一个点都进行热门度计算，约20万\n",
     "\n",
     "        neis = node_region[node]\n",
@@ -407,27 +414,19 @@
     "            node_region_end_geofly_ratio[node] = 0\n",
     "\n",
     "        if total_region == 0 or total_node == 0:\n",
-    "            node_geofly_region_overall_ratio[node] = -1\n",
+    "            node_region_overall_geofly_ratio[node] = 0\n",
     "        else:\n",
-    "            node_geofly_region_overall_ratio[node] = total_node / total_region\n",
+    "            node_region_overall_geofly_ratio[node] = total_node / total_region\n",
+    "            \n",
+    "    with open('./data/temp/feature_table/node_region_start_geofly_ratio','wb+') as f:\n",
+    "        pickle.dump(node_region_start_geofly_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
     "\n",
-    "    with open(\"./data/temp/feature_table/node_region_start_geofly_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in node_region_start_geofly_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
+    "    with open('./data/temp/feature_table/node_region_end_geofly_ratio','wb+') as f:\n",
+    "        pickle.dump(node_region_end_geofly_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "        \n",
+    "    with open('./data/temp/feature_table/node_region_overall_geofly_ratio','wb+') as f:\n",
+    "        pickle.dump(node_region_overall_geofly_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
     "\n",
-    "    with open(\"./data/temp/feature_table/node_region_end_geofly_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in node_region_end_geofly_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
-    "    with open(\"./data/temp/feature_table/node_geofly_region_overall_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in node_geofly_region_overall_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
     "\n",
     "def render_feature_table_part_1():\n",
     "    print(\"render_feature_table_part_1\")\n",
@@ -437,6 +436,23 @@
     "    _create_node_geofly_region_ratio_table()\n",
     "\n",
     "    print(\"-----------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_create_node_geofly_region_ratio_table\n"
+     ]
+    }
+   ],
+   "source": [
+    "_create_node_geofly_region_ratio_table()"
    ]
   },
   {
@@ -455,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -494,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -584,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -634,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -685,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -736,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -786,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -805,12 +821,10 @@
     "        return user_loc_as_end_ratio\n",
     "\n",
     "    user_loc_as_end_ratio = get_user_loc_as_end_ratio(user_use_end, user_count)\n",
-    "    with open(\"./data/temp/feature_table/user_loc_as_end_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in user_loc_as_end_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
+    "    \n",
+    "    with open('./data/temp/feature_table/user_loc_as_end_ratio','wb+') as f:\n",
+    "        pickle.dump(user_loc_as_end_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
     "# 用户从某点出发的比例\n",
     "# 所有点都集中在此表上，不区分起点和终点\n",
     "# ./data/temp/feature_table/user_loc_as_start_ratio.csv\n",
@@ -824,12 +838,10 @@
     "        return user_loc_as_start_ratio\n",
     "\n",
     "    user_loc_as_start_ratio = get_user_loc_as_start_ratio(user_use_start, user_count)\n",
-    "    with open(\"./data/temp/feature_table/user_loc_as_start_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in user_loc_as_start_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
+    "    \n",
+    "    with open('./data/temp/feature_table/user_loc_as_start_ratio','wb+') as f:\n",
+    "        pickle.dump(user_loc_as_start_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
     "\n",
     "# geofly后，用户去某一点的比例\n",
     "# 所有点都集中在此表上，不区分起点和终点\n",
@@ -844,12 +856,10 @@
     "        return user_loc_as_end_geofly_ratio\n",
     "\n",
     "    user_loc_as_end_geofly_ratio = get_user_loc_as_end_geofly_ratio(user_use_end_geofly, user_count)\n",
-    "    with open(\"./data/temp/feature_table/user_loc_as_end_geofly_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in user_loc_as_end_geofly_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
+    "    \n",
+    "    with open('./data/temp/feature_table/user_loc_as_end_geofly_ratio','wb+') as f:\n",
+    "        pickle.dump(user_loc_as_end_geofly_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
     "\n",
     "# geofly后，用户从某点出发的比例\n",
     "# 所有点都集中在此表上，不区分起点和终点\n",
@@ -864,13 +874,11 @@
     "        return user_loc_as_start_geofly_ratio\n",
     "\n",
     "    user_loc_as_start_geofly_ratio = get_user_loc_as_start_geofly_ratio(user_use_start_geofly, user_count)\n",
-    "    with open(\"./data/temp/feature_table/user_loc_as_start_geofly_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in user_loc_as_start_geofly_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
-    "\n",
+    "    \n",
+    "    with open('./data/temp/feature_table/user_loc_as_start_geofly_ratio','wb+') as f:\n",
+    "        pickle.dump(user_loc_as_start_geofly_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "        \n",
+    "        \n",
     "def render_feature_table_part_2():\n",
     "    print(\"render_feature_table_part_2\")\n",
     "\n",
@@ -900,6 +908,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "render_feature_table_part_2\n",
+      "_create_user_use_start_table\n",
+      "_create_user_use_end_table\n",
+      "-----------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "render_feature_table_part_2()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -915,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -968,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -1021,12 +1049,9 @@
     "        return user_start_to_end_ratio\n",
     "\n",
     "    user_start_to_end_ratio = get_user_start_to_end_ratio(user_count)\n",
-    "\n",
-    "    with open(\"./data/temp/feature_table/user_start_to_end_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in user_start_to_end_ratio.items():\n",
-    "            writer.writerow([key, value])"
+    "    \n",
+    "    with open('./data/temp/feature_table/user_start_to_end_ratio','wb+') as f:\n",
+    "        pickle.dump(user_start_to_end_ratio, f, pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -1038,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -1102,12 +1127,10 @@
     "        return user_start_geofly_to_end_ratio\n",
     "\n",
     "    user_start_geofly_to_end_ratio = get_user_start_geofly_to_end_ratio(user_count)\n",
-    "\n",
-    "    with open(\"./data/temp/feature_table/user_start_geofly_to_end_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in user_start_geofly_to_end_ratio.items():\n",
-    "            writer.writerow([key, value])"
+    "    \n",
+    "    with open('./data/temp/feature_table/user_start_geofly_to_end_ratio','wb+') as f:\n",
+    "        pickle.dump(user_start_geofly_to_end_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "        "
    ]
   },
   {
@@ -1119,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -1185,12 +1208,9 @@
     "        return user_start_to_end_geofly_ratio\n",
     "\n",
     "    user_start_to_end_geofly_ratio = get_user_start_to_end_geofly_ratio(user_count)\n",
-    "\n",
-    "    with open(\"./data/temp/feature_table/user_start_to_end_geofly_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in user_start_to_end_geofly_ratio.items():\n",
-    "            writer.writerow([key, value])"
+    "    \n",
+    "    with open('./data/temp/feature_table/user_start_to_end_geofly_ratio','wb+') as f:\n",
+    "        pickle.dump(user_start_to_end_geofly_ratio, f, pickle.HIGHEST_PROTOCOL)\n"
    ]
   },
   {
@@ -1202,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -1270,13 +1290,9 @@
     "        return user_start_geofly_to_end_geofly_ratio\n",
     "\n",
     "    user_start_geofly_to_end_geofly_ratio = get_user_start_geofly_to_end_geofly_ratio(user_count)\n",
-    "\n",
-    "    with open(\"./data/temp/feature_table/user_start_geofly_to_end_geofly_ratio.csv\", 'w', newline='') as csv_file:\n",
-    "        writer = csv.writer(csv_file)\n",
-    "        writer.writerow(['key', 'value'])\n",
-    "        for key, value in user_start_geofly_to_end_geofly_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
+    "    \n",
+    "    with open('./data/temp/feature_table/user_start_geofly_to_end_geofly_ratio','wb+') as f:\n",
+    "        pickle.dump(user_start_geofly_to_end_geofly_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
     "\n",
     "def render_feature_table_part_3():\n",
     "    print(\"render_feature_table_part_3\")\n",
@@ -1290,6 +1306,37 @@
     "\n",
     "    print(\"-----------------------------\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "render_feature_table_part_3\n",
+      "_create_user_start_to_end_ratio_table\n",
+      "_create_user_start_geofly_to_end_ratio_table\n",
+      "_create_user_start_to_end_geofly_ratio_table\n",
+      "_create_user_start_geofly_to_end_geofly_ratio_table\n",
+      "-----------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "render_feature_table_part_3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
