--- a/jupyter/Part5-7.ipynb
+++ b/jupyter/Part5-7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -434,25 +434,25 @@
    },
    "outputs": [],
    "source": [
-    "start_to_end_end_in_ratio = get_end_to_end_ratio('./data/train_hard.csv',\\\n",
+    "start_to_end_end_in_ratio = get_start_to_end_end_in_ratio('./data/train_hard.csv',\\\n",
     "                                                       './data/train_hard.csv')\n",
     "\n",
-    "start_geofly_to_end_end_in_ratio = get_end_to_end_ratio('./data/train_start_geofly.csv',\\\n",
+    "start_geofly_to_end_end_in_ratio = get_start_to_end_end_in_ratio('./data/train_start_geofly.csv',\\\n",
     "                                                       './data/train_hard.csv')\n",
     "\n",
-    "start_to_end_geofly_end_geofly_in_ratio = get_end_to_end_ratio('./data/train_end_geofly.csv',\\\n",
+    "start_to_end_geofly_end_geofly_in_ratio = get_start_to_end_end_in_ratio('./data/train_end_geofly.csv',\\\n",
     "                                                       './data/train_end_geofly.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "start_geofly_to_end_geofly_end_in_ratio = get_end_to_end_ratio('./data/train_end_geofly.csv',\\\n",
+    "start_geofly_to_end_geofly_end_in_ratio = get_start_to_end_end_in_ratio('./data/train_start_geofly_end_geofly.csv',\\\n",
     "                                                       './data/train_end_geofly.csv')"
    ]
   },
@@ -472,7 +472,17 @@
     "    \n",
     "with open('./data/temp/feature_table/start_to_end_geofly_end_geofly_in_ratio','wb+') as f:\n",
     "    pickle.dump(start_to_end_geofly_end_geofly_in_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
-    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "with open('./data/temp/feature_table/start_geofly_to_end_geofly_end_in_ratio','wb+') as f:\n",
     "    pickle.dump(start_geofly_to_end_geofly_end_in_ratio, f, pickle.HIGHEST_PROTOCOL)"
    ]
