--- a/jupyter/Part8-9.ipynb
+++ b/jupyter/Part8-9.ipynb
@@ -382,29 +382,29 @@
     "                    \n",
     "    user_cur_hour_start_to_end_ratio = {}# 该用户该小时从此起点到终点／用户总出发次数\n",
     "\n",
-    "    #user_cur_hour_start_to_end_cur_hour_ratio = {}# 该用户该小时从此起点到终点点／用户该小时出发次数\n",
+    "    user_cur_hour_start_to_end_cur_hour_ratio = {}# 该用户该小时从此起点到终点点／用户该小时出发次数\n",
     "    \n",
     "    for user in user_cur_hour_start_to_end:\n",
     "        user_cur_hour_start_to_end_ratio[user] = {}\n",
-    "        #user_cur_hour_start_to_end_cur_hour_ratio[user] = {}\n",
+    "        user_cur_hour_start_to_end_cur_hour_ratio[user] = {}\n",
     "        \n",
     "        for hour in user_cur_hour_start_to_end[user]:\n",
     "            user_cur_hour_start_to_end_ratio[user][hour] = {}\n",
-    "            #user_cur_hour_start_to_end_cur_hour_ratio[user][hour] = {}\n",
+    "            user_cur_hour_start_to_end_cur_hour_ratio[user][hour] = {}\n",
     "            \n",
     "            for start in user_cur_hour_start_to_end[user][hour]:\n",
     "                user_cur_hour_start_to_end_ratio[user][hour][start] = {}\n",
-    "                #user_cur_hour_start_to_end_cur_hour_ratio[user][hour][start] = {}\n",
+    "                user_cur_hour_start_to_end_cur_hour_ratio[user][hour][start] = {}\n",
     "                \n",
     "                for end in user_cur_hour_start_to_end[user][hour][start]:\n",
     "                    user_cur_hour_start_to_end_ratio[user][hour][start][end] = \\\n",
     "                                user_cur_hour_start_to_end[user][hour][start][end]/user_count[user]\n",
     "                        \n",
-    "                    #user_cur_hour_start_to_end_cur_hour_ratio[user][hour][start][end] = \\\n",
-    "                                #user_cur_hour_start_to_end[user][hour][start][end]/user_hour_count[user][hour]\n",
+    "                    user_cur_hour_start_to_end_cur_hour_ratio[user][hour][start][end] = \\\n",
+    "                                user_cur_hour_start_to_end[user][hour][start][end]/user_hour_count[user][hour]\n",
     "             \n",
     "            \n",
-    "    return user_cur_hour_start_to_end_ratio#,user_cur_hour_start_to_end_cur_hour_ratio"
+    "    return user_cur_hour_start_to_end_ratio,user_cur_hour_start_to_end_cur_hour_ratio"
    ]
   },
   {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
