--- a/jupyter/不完全缓存.ipynb
+++ b/jupyter/不完全缓存.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -15,6 +15,181 @@
     "from scipy.stats import mode\n",
     "import function\n",
     "import pickle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# man_dis,lat_different,long_different,direction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "man_dis_dic = {}\n",
+    "direction_dic = {}\n",
+    "lat_diff_dic = {}\n",
+    "long_diff_dic = {}\n",
+    "user_show_count_dic = {}\n",
+    "\n",
+    "i = 0\n",
+    "csv_reader = csv.reader(open('./data/train_hard3.csv', encoding='utf-8'))\n",
+    "for row in csv_reader:\n",
+    "    i+=1\n",
+    "    if i == 1:\n",
+    "        print(row[9],row[18],row[19],row[20],row[21])\n",
+    "        continue\n",
+    "        \n",
+    "    user = row[1]\n",
+    "    start = row[5]\n",
+    "    end = row[6]\n",
+    "        \n",
+    "    man_dis = row[9]\n",
+    "    direction = row[18]\n",
+    "    lat_diff = row[19]\n",
+    "    long_diff = row[20]\n",
+    "    user_show_count = row[21]\n",
+    "    \n",
+    "    if start not in man_dis_dic:\n",
+    "        man_dis_dic[start] = {}\n",
+    "        man_dis_dic[start][end] = man_dis\n",
+    "    else:\n",
+    "        if end not in man_dis_dic[start]:\n",
+    "            man_dis_dic[start][end] = man_dis\n",
+    "    \n",
+    "    if start not in direction_dic:\n",
+    "        direction_dic[start] = {}\n",
+    "        direction_dic[start][end] = direction\n",
+    "    else:\n",
+    "        if end not in direction_dic[start]:\n",
+    "            direction_dic[start][end] = direction\n",
+    "            \n",
+    "    if start not in lat_diff_dic:\n",
+    "        lat_diff_dic[start] = {}\n",
+    "        lat_diff_dic[start][end] = lat_diff\n",
+    "    else:\n",
+    "        if end not in lat_diff_dic[start]:\n",
+    "            lat_diff_dic[start][end] = lat_diff\n",
+    "            \n",
+    "    if start not in long_diff_dic:\n",
+    "        long_diff_dic[start] = {}\n",
+    "        long_diff_dic[start][end] = long_diff\n",
+    "    else:\n",
+    "        if end not in long_diff_dic[start]:\n",
+    "            long_diff_dic[start][end] = long_diff\n",
+    "            \n",
+    "    if user not in user_show_count_dic:\n",
+    "        user_show_count_dic[user] = user_show_count\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "  \n",
+    "with open('./data/temp/Incomplete_caching/man_dis_dic','wb+') as f:\n",
+    "    pickle.dump(man_dis_dic, f, pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "with open('./data/temp/Incomplete_caching/direction_dic','wb+') as f:\n",
+    "    pickle.dump(direction_dic, f, pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "\n",
+    "with open('./data/temp/Incomplete_caching/lat_diff_dic','wb+') as f:\n",
+    "    pickle.dump(lat_diff_dic, f, pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "with open('./data/temp/Incomplete_caching/long_diff_dic','wb+') as f:\n",
+    "    pickle.dump(long_diff_dic, f, pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "with open('./data/temp/Incomplete_caching/user_show_count_dic','wb+') as f:\n",
+    "    pickle.dump(user_show_count_dic, f, pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 生成用户的使用序列"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "PATH= './IJCAI/'\n",
+    "df_train = pd.read_csv('./data/train_hard.csv')\n",
+    "df_test = pd.read_csv('./data/test_hard.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "length = len(df_train)\n",
+    "df_merge = pd.concat([df_train, df_test]).reset_index()\n",
+    "df_merge.drop(['index'],axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge = df_merge.iloc[df_merge.starttime.sort_values().index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_used_time = {}\n",
+    "\n",
+    "for user in df_merge.userid.value_counts().index:\n",
+    "    user_used_time[user] = df_merge[df_merge.userid == user]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('./data/temp/Incomplete_caching/user_used_time','wb+') as f:\n",
+    "    pickle.dump(user_used_time, f, pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -446,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -493,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -511,28 +686,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(43.34381103515625, 119.0093994140625, 0.00274658203125, 0.0054931640625)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function.decode_exactly('wxsws4')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def creat_long_lat_diff(path):\n",
@@ -566,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
