--- a/jupyter/硬编码及必要特征构建.ipynb
+++ b/jupyter/硬编码及必要特征构建.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -12,13 +12,14 @@
     "import numpy as np\n",
     "import networkx as nx\n",
     "import math\n",
-    "from scipy.stats import mode\n",
-    "import function"
+    "import function\n",
+    "import pickle\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -557,6 +558,75 @@
     "        else:\n",
     "            row.append('')\n",
     "        ###\n",
+    "        writer.writerow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 每个用户曾经出现的次数\n",
+    "i = 0\n",
+    "user_count = {}\n",
+    "csv_reader = csv.reader(open('./data/temp/user_count.csv', encoding='utf-8'))\n",
+    "for row in csv_reader:\n",
+    "    i+=1\n",
+    "    if i==1:\n",
+    "        continue\n",
+    "    user_count[row[0]] = eval(row[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 每个用户曾经出现的次数\n",
+    "i = 0\n",
+    "with open(\"./data/train_hard1.csv\", 'w', newline='') as csv_file:\n",
+    "    writer = csv.writer(csv_file)\n",
+    "    \n",
+    "    csv_reader = csv.reader(open('./data/train_hard.csv', encoding='utf-8'))\n",
+    "    for row in csv_reader:\n",
+    "        i+=1\n",
+    "        if i==1:\n",
+    "            row.append('user_show_count')\n",
+    "            writer.writerow(row)\n",
+    "            continue\n",
+    "        user = row[1]\n",
+    "        row.append(user_count.get(user,0))\n",
+    "        writer.writerow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 每个用户曾经出现的次数\n",
+    "i = 0\n",
+    "with open(\"./data/test_hard1.csv\", 'w', newline='') as csv_file:\n",
+    "    writer = csv.writer(csv_file)\n",
+    "    \n",
+    "    csv_reader = csv.reader(open('./data/test_hard.csv', encoding='utf-8'))\n",
+    "    for row in csv_reader:\n",
+    "        i+=1\n",
+    "        if i==1:\n",
+    "            row.append('user_show_count')\n",
+    "            writer.writerow(row)\n",
+    "            continue\n",
+    "            \n",
+    "        user = row[1]\n",
+    "        row.append(user_count.get(user,0))\n",
+    "        \n",
     "        writer.writerow(row)"
    ]
   },
